parser/src/tests/corpus/negatives/invalid-let-syntax/expected
Error 1/1: found '{', expected ' ' or '\n'
In source "negatives/invalid-let-syntax/input", line 1:
  let {
      ^
